2004-01-30 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/multiload.xml: Updated for GNOME 2.6, technical review draft
	* docs/C/multiload-C.omf: Added for GNOME 2.6
	* docs/C/l10n.txt: Added for GNOME 2.6
	* docs/C/figures/system-monitor-applet_window.png: Added for GNOME 2.6


2004-01-30  Archana Shah  <archana.shah@wipro.com>

	* main.c: (multiload_destroy_cb): Freeing colors structure here
	instead of freeing it in function load_graph_destroy.
	Fixes bug #132843

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (install-data-local): builddir != srcdir fix.

2003-12-15  Olli Helenius  <liff@iki.fi>

	* load-graph.c, main.c: Also get rid of deprecated GDK functions.

2003-12-14  Kevin Vandersloot
	
	* load-graph.c, properties.c: Use non deprecated gtk funtions. Fixes
	bug #127531. Patch from Olli Helenius

2003-11-19  Kevin Vandersloot

	* linux-proc.c: fix up memory reporting. Might fix bug #126461.

2003-11-06  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Makefile.am: Remove the GTK_DISABLE_DEPRECATED and
	GNOME_DISABLE_DEPRECATED definitions to unbreak the build (this
	applet uses GnomeColorPicker). Fixes bug #126245.

2003-11-01  Kjartan Maraas  <kmaraas@gnome.org>

	* load-graph.c: (load_graph_destroy): Merge fix for
	a leak from stable. Closes bug #125594.

Mon Sep 15 15:38:05 2003  George Lebl <jirka@5z.com>

	* main.c: when started in lockdown mode, hide the preferences item,
	  also hide the "run procman" item as it seems that would be harmful
	  in a locked down session no matter how you look at it, also
	  hide the procman launching if command line is inhibited since
	  then procman would really be likely harmful.

2003-08-09 John Fleck <jfleck@inkstain.net>

	* docs/C/Makefile.am
	* docs/C/multiload.xml
	adding updated docs from Chee Bin HOH

2003-08-08  Christian Neumair  <chris@gnome-de.org>

	* multiload.schemas.in: Commit patch from #116066.

2003-07-24  Kevin Vandersloot
